k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: customer-52410
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
